# vx68k-v1

./: AUTHORS  ChangeLog  ChangeLog.gtk  MEMO.ja  Makefile.am  Makefile.in  NEWS  README  TODO  VERSION-ID  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  main.cc
doc/: ChangeLog  Makefile.am  Makefile.in  docbook2texi  program.dtd  program.xml  texinfo.tex  vx68k.info  vx68k.sgml  vx68k.texi  vx68k.xml
gtkvx68k/: ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.in
gtkvx68k/intl/: config.charset  ngettext.c
gtkvx68k/libvx68k-gtk/: Makefile.in  gtk_gl.h
gtkvx68k/libvx68k-gtk/vx68k/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  debug.h
include/vm68k/: Makefile.am  Makefile.in  addressing.h  condition.h  conditional.h  cpu.h  except.h  memory.h  mutex.h  processor.h  types.h
include/vx68k/: Makefile.am  Makefile.in  gtk.h  human.h  iocs.h  machine.h  memory.h  utility.h  version.h
intl/: dcngettext.c  dngettext.c  libgnuintl.h  locale.alias
lib/: Makefile.am
lib/vm68k/: Makefile.am  addrspace.cc  context.cc  cpu.cc  execunit.cc  memory.cc  statusreg.cc
lib/vx68k/: Makefile.am  allocator.cc  dos.cc  doscontext.cc  filesystem.cc  gtkconsole.cc  machine.cc  mainmem.cc  memory.cc  process.cc  shell.cc  textvram.cc
libvm68k/: Makefile.am  README  TODO  addrspace.cc  context.cc  defaultmem.cc  execunit.cc  inst.h  inst0.cc  inst11.cc  inst12.cc  inst13.cc  inst14.cc  inst1to3.cc  inst4.cc  inst5.cc  inst6.cc  inst7.cc  inst8.cc  inst9.cc  libvm68k.prj  memory.cc  memory_map.cc  statusreg.cc
libvx68k/: Makefile.am  Makefile.in  allocator.cc  areaset.cc  crtcmem.cc  dmacmem.cc  dos.cc  doscontext.cc  fdcmem.cc  filesystem.cc  fontrom.cc  gvideomem.cc  iocsdisk.cc  machine.cc  mainmem.cc  mfpmem.cc  msm6258vmem.cc  opmmem.cc  palettemem.cc  ppimem.cc  sccmem.cc  shell.cc  spritemem.cc  sram.cc  sysportmem.cc  systemrom.cc  textvram.cc  version.cc  x68kaddr.cc
libvx68k-gtk/: Makefile.am  Makefile.in
libvx68k-gtk/vx68k/: Makefile.in
libvx68kdos/: Makefile.am  Makefile.in  allocator.cc  dos.cc  doscontext.cc  filesystem.cc  main_memory.cc  shell.cc  version.cc
libvx68kdos/vx68k/: Makefile.am  Makefile.in  dos  version
libvx68kgtk/: Makefile.am  gtkconsole.cc
m68k/: Makefile.am  cpu.cc  cpu.h  memory.cc
po/: ChangeLog  POTFILES.in  ja.gmo  ja.po  vx68k-gtk.pot  vx68k.pot
programs/: Makefile.in  gtkabout.cc
testsuite/: Makefile.am  Makefile.in
testsuite/config/: default.exp
vm68k/: Makefile.am  Makefile.in  addrspace.cc  context.cc  cpu.cc  execunit.cc  memory.cc  statusreg.cc
vx68k/: Makefile.am  Makefile.in  allocator.cc  dos.cc  doscontext.cc  gtkconsole.cc  loader.cc  main.cc  memory.cc  textvram.cc
vx68k-gtk/: ChangeLog  NEWS  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
vx68k-gtk/intl/: dcigettext.c  localcharset.c  plural.y  ref-add.sin  ref-del.sin
vx68k-gtk/libvx68k-gtk/: Makefile.am  gl.cc  gtk_gl.h  gtkconsole.cc
vx68k-gtk/libvx68k-gtk/vx68k/: gtk.h
vx68k-gtk/po/: ChangeLog  POTFILES
vx68kgtk/: Makefile.am  gtkconsole.cc
vx68kui/: Makefile.am  gtkconsole.cc
x68k/: Makefile.am  main.cc
