dnl Process this file with autoconf to produce a configure script.
AC_INIT(libvx68k/machine.cc)
AM_INIT_AUTOMAKE(vx68k, 1.1.8)
AM_CONFIG_HEADER(config.h)
AC_DEFINE(_GNU_SOURCE,, [Define for GNU extensions. ])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AM_DISABLE_SHARED
AM_PROG_LIBTOOL
LTLIBRELEASE="-release 1.1"
AC_SUBST(LTLIBRELEASE)dnl
AC_ISC_POSIX
AM_PATH_GTK(1.2.0,,, gthread)
AC_CHECK_HEADERS(fcntl.h unistd.h)
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_CXX_EXCEPTIONS
AC_CXX_TEMPLATES
AC_CXX_NAMESPACES
AC_CHECK_FUNCS(localtime_r)
ALL_LINGUAS=""
AM_GNU_GETTEXT
AC_ARG_WITH(nana,
[  --with-nana             use GNU Nana for testing [no]],, with_nana=no)
if test "$with_nana" != no; then
  AC_CHECK_LIB(nana, _I_default_handler)
  AC_CHECK_HEADERS(nana.h)
fi

if test "$ac_cv_cxx_exceptions" != yes; then
  AC_MSG_WARN([the C++ compiler does not support exceptions])
  AC_MSG_WARN([this program cannot be built without exceptions])
fi

if test "$ac_cv_cxx_templates" != yes; then
  AC_MSG_WARN([the C++ compiler does not support templates])
  AC_MSG_WARN([this program cannot be built without templates])
fi

if test "$ac_cv_cxx_namespaces" != yes; then
  AC_MSG_WARN([the C++ compiler does not implement namespaces])
  AC_MSG_WARN([this program cannot be built without namespaces])
fi

AC_OUTPUT(Makefile include/Makefile include/vx68k/Makefile \
libvx68k/Makefile libvx68kdos/Makefile vx68kui/Makefile \
intl/Makefile bin/Makefile po/Makefile.in \
doc/Makefile testsuite/Makefile)
