dnl Process this file with autoconf to produce a configure script.
AC_INIT(libvx68k/machine.cc)
AM_INIT_AUTOMAKE(vx68k, 1.1.10)
LTLIBRELEASE="-release 1.1"
AC_SUBST(LTLIBRELEASE)dnl
AC_ARG_WITH(includes,
[  --with-includes=DIR     use extra include files in DIR],
[CPPFLAGS="$CPPFLAGS -I$withval"])
AC_ARG_WITH(libraries,
[  --with-libraries=DIR    use extra library files in DIR],
[LIBS="-L$withval $LIBS"])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_ARG_WITH(nana,
[  --with-nana             use GNU Nana for debugging])
if test "$with_nana" = yes; then
  AC_CHECK_LIB(nana, _I_default_handler)
  AC_CHECK_HEADERS(nana.h)
fi

AC_CHECK_HEADERS(fcntl.h unistd.h)
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_CXX_EXCEPTIONS
AC_CXX_TEMPLATES
AC_CXX_NAMESPACES
AC_CHECK_FUNCS(localtime_r)
AM_DISABLE_SHARED
AM_PROG_LIBTOOL
if test "$ac_cv_cxx_exceptions" != yes; then
  AC_MSG_WARN([the C++ compiler does not support exceptions])
  AC_MSG_WARN([this program cannot be built without exceptions])
fi

if test "$ac_cv_cxx_templates" != yes; then
  AC_MSG_WARN([the C++ compiler does not support templates])
  AC_MSG_WARN([this program cannot be built without templates])
fi

if test "$ac_cv_cxx_namespaces" != yes; then
  AC_MSG_WARN([the C++ compiler does not implement namespaces])
  AC_MSG_WARN([this program cannot be built without namespaces])
fi

AM_CONFIG_HEADER(config.h)
AC_CONFIG_SUBDIRS(gtkvx68k)
AC_OUTPUT(Makefile include/Makefile include/vx68k/Makefile \
libvx68k/Makefile libvx68kdos/Makefile \
doc/Makefile testsuite/Makefile)
