dnl Process this file with autoconf to produce a configure script.
AC_INIT(libvx68k-gtk/gtkconsole.cc)
AM_INIT_AUTOMAKE(vx68k-gtk, 1.1.10)
AC_ARG_WITH(includes,
[  --with-includes=DIR     use extra include files in DIR],
[CPPFLAGS="$CPPFLAGS -I$withval"])
AC_ARG_WITH(libraries,
[  --with-libraries=DIR    use extra library files in DIR],
[LIBS="-L$withval $LIBS"])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_ISC_POSIX
AC_ARG_WITH(nana,
[  --with-nana             use GNU Nana for debugging])
if test "$with_nana" = yes; then
  AC_CHECK_LIB(nana, _I_default_handler)
  AC_CHECK_HEADERS(nana.h)
fi

AC_SEARCH_LIBS(glGetError, GL)
AC_SEARCH_LIBS(gluErrorString, GLU)
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
AC_CHECK_LIB(vm68k, main, LIBVM68K="-lvm68k")
AC_SUBST(LIBVM68K)dnl
AC_LANG_RESTORE
AM_PATH_GTK(1.2.0,,, gthread)
AC_CHECK_HEADERS(GL/gl.h GL/glu.h GL/glx.h fcntl.h unistd.h)
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_CXX_EXCEPTIONS
AC_CXX_TEMPLATES
AC_CXX_NAMESPACES
ALL_LINGUAS=""
AM_GNU_GETTEXT
AM_DISABLE_SHARED
AM_PROG_LIBTOOL
if test "$ac_cv_cxx_exceptions" != yes; then
  AC_MSG_WARN([the C++ compiler does not support exceptions])
  AC_MSG_WARN([this program cannot be built without exceptions])
fi

if test "$ac_cv_cxx_templates" != yes; then
  AC_MSG_WARN([the C++ compiler does not support templates])
  AC_MSG_WARN([this program cannot be built without templates])
fi

if test "$ac_cv_cxx_namespaces" != yes; then
  AC_MSG_WARN([the C++ compiler does not implement namespaces])
  AC_MSG_WARN([this program cannot be built without namespaces])
fi

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile intl/Makefile po/Makefile.in \
libvx68k-gtk/Makefile libvx68k-gtk/vx68k/Makefile bin/Makefile)
